I modified some changes in the index.html file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ Examples
 [1,2,3,4,5],[1,2,3,4] = false;
 '''
 
-arr1 = [5,2,8,5]
-arr2 = [1,2,3,4]
+
 dict_one= {}
 dict_two = {}
 
@@ -31,5 +30,7 @@ def dic(dict_one, dict_two):
                 return True
             else:
                 return False
-
-dict(dict_one, dict_two)
+    return True
+arr1 = [5,2,8,5]
+arr2 = [1,2,3,4]
+dict(arr1,arr2)
